# info--panel

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/BMP280/: CMakeLists.txt
components/BMP280/include/: bmp280.h
components/BMP280/src/: bmp280.c
components/DHT10/include/: dht10.h
components/DHT10/src/: dht10.c
components/DHT20/include/: dht20.h
components/DHT20/src/: dht20.c
components/adc_reader/: CMakeLists.txt
components/adc_reader/include/: adc_reader.h
components/adc_reader/src/: adc_reader.c
components/clock_module/: CMakeLists.txt
components/clock_module/include/: clock_module.h
components/device_common/: CMakeLists.txt
components/device_common/include/: device_common.h
components/device_common/src/: device_common.c  device_gpio.c
components/device_macro/: CMakeLists.txt
components/device_memory/: CMakeLists.txt
components/device_task/: CMakeLists.txt
components/device_task/include/: device_task.h
components/device_task/src/: device_task.c
components/display_icons/: CMakeLists.txt
components/epaper_adapter/: CMakeLists.txt
components/forecast_http_client/: CMakeLists.txt
components/i2c_adapter/: CMakeLists.txt
components/periodic_task/: CMakeLists.txt
components/screen_handler/: CMakeLists.txt
components/screen_handler/include/: screen_handler.h
components/screen_handler/src/: screen_handler.c
components/setting_server/: CMakeLists.txt
components/setting_server/embedded_files/: index.html  script.js  style.css
components/setting_server/include/: setting_server.h
components/setting_server/src/: setting_server.c
components/sound_generator/: CMakeLists.txt
components/toolbox/: CMakeLists.txt
components/wifi_service/: CMakeLists.txt  Kconfig
fonts/: font48.c  font64.c
icons/: house_48x48.c  house_48x48.h
main/: CMakeLists.txt  main.c  test_periph.c  test_periph.h
Нова папка/: sdkconfig
(+25 files in other folders)
